--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/css/index/0general.css">
-    <link rel="stylesheet" href="/css/index/1navbar.css">
+    <link rel="stylesheet" href="/css/index/navbar.css">
     <link rel="stylesheet" href="/css/index/3below_background_boxes.css">
     <link rel="stylesheet" href="/css/index/2showcase.css">
     <link rel="stylesheet" href="/css/index/4paragraph.css">
