--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="/css/0general.css">
-    <link rel="stylesheet" href="/css/1navbar.css">
-    <link rel="stylesheet" href="/css/3below_background_boxes.css">
-    <link rel="stylesheet" href="/css/2showcase.css">
-    <link rel="stylesheet" href="/css/4paragraph.css">
-    <link rel="stylesheet" href="/css/5shape&boxes.css">
-    <link rel="stylesheet" href="/css/6paragraph_below_shape&boxes.css">
-    <link rel="stylesheet" href="/css/7footter.css">
+    <link rel="stylesheet" href="/css/index/0general.css">
+    <link rel="stylesheet" href="/css/index/1navbar.css">
+    <link rel="stylesheet" href="/css/index/3below_background_boxes.css">
+    <link rel="stylesheet" href="/css/index/2showcase.css">
+    <link rel="stylesheet" href="/css/index/4paragraph.css">
+    <link rel="stylesheet" href="/css/index/5shape&boxes.css">
+    <link rel="stylesheet" href="/css/index/6paragraph_below_shape&boxes.css">
+    <link rel="stylesheet" href="/css/index/7footter.css">
     <link rel="stylesheet" href="/css/returnbutton.css">
     <link rel="stylesheet" href="/css/ahmed_card.css">
     <link rel="stylesheet" href="/css/courses.css">
