--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/index/0general.css">
-    <link rel="stylesheet" href="/css/index/1navbar.css">
+    <link rel="stylesheet" href="css/index/1navbar.css">
     <link rel="stylesheet" href="css/index/3below_background_boxes.css">
     <link rel="stylesheet" href="css/index/2showcase.css">
     <link rel="stylesheet" href="css/index/4paragraph.css">
@@ -31,7 +31,7 @@
         <div class=" row  justify-content-center align-items-center">
           <div class="col-4 text-start ">
             <div class="col">
-              <a href="index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
+              <a href="index.html"><img id="Top" class="img"  src="images/4.png" alt=""></a> 
             </div>
           </div>
           <div class="col">
@@ -80,7 +80,7 @@
                         <div class="offcanvas-header">
                           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                             <div class="col">
-                                <a href="index.html"><img class="img" src="/images/4.png" alt=""></a>
+                                <a href="index.html"><img class="img" src="images/4.png" alt=""></a>
                               </div>
                           </h5>
                           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -133,8 +133,8 @@
 </div>
 <!-- showcase -->
 <div>
-  <img src="/images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
-  <img src="/images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
+  <img src="images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
+  <img src="images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
   <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
     <div class="row justify-content-center  justify-content-lg-end">
         <div class="col-10 col-sm-10 col-md-10  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
@@ -168,7 +168,7 @@
       </div>
 
       <div class="col-4">
-        <img src="/icons/online.png" class="icons img-fluid rounded-start" alt="...">
+        <img src="icons/online.png" class="icons img-fluid rounded-start" alt="...">
       </div>
     </div>
   </div>
@@ -185,7 +185,7 @@
         </div>
 
         <div class="col-4">
-          <img src="/icons/teachers.png" class="icons img-fluid rounded-start" alt="...">
+          <img src="icons/teachers.png" class="icons img-fluid rounded-start" alt="...">
         </div>
 
       </div>
@@ -205,7 +205,7 @@
         </div>
         
         <div class="col-4">
-          <img src="/icons/time.png" class="icons img-fluid rounded-start" alt="...">
+          <img src="icons/time.png" class="icons img-fluid rounded-start" alt="...">
         </div>
 
     </div>
@@ -225,8 +225,8 @@
   </div>
 </div>
 <!-- background_body_boxes_and_btn -->
-<img class="img_background_body d-none d-lg-block" src="/images/bodybackground.png" alt="">
-<img class="img_background_body_mobile d-md-block d-lg-none" src="/images/bodybackgroundmobile.png" alt="">
+<img class="img_background_body d-none d-lg-block" src="images/bodybackground.png" alt="">
+<img class="img_background_body_mobile d-md-block d-lg-none" src="images/bodybackgroundmobile.png" alt="">
 <div>
   <div class="text-center title_above_boxes_body">
     <h1 class="tittle_boxes_font_size">
@@ -252,7 +252,7 @@
   
   
         <div class="col-4">
-          <img src="/images/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
+          <img src="images/4.png" class="image_icon_1 img-fluid rounded-start" alt="...">
         </div>
   
   
@@ -271,7 +271,7 @@
           </div>
   
           <div class="col-4">
-            <img src="/images/4.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/4.png" class="img-fluid rounded-start" alt="...">
           </div>
   
         </div>
@@ -291,7 +291,7 @@
           </div>
           
           <div class="col-4">
-            <img src="/images/4.png" class="img-fluid rounded-start" alt="...">
+            <img src="images/4.png" class="img-fluid rounded-start" alt="...">
           </div>
   
       </div>
@@ -349,7 +349,7 @@
 </div>
 <!-- footer -->
 <div class="fluid text-center">
-  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
+  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="images/4.png" alt=""></a>
   <div class="user-select-none text-dark">
     Copy Right &copy; Ahmed Avdal Shereef
   </div>
