--- a/michael.html
+++ b/michael.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/index/0general.css">
-    <link rel="stylesheet" href="/css/index/1navbar.css">
-    <link rel="stylesheet" href="/css/index/2showcase.css">
-    <link rel="stylesheet" href="/css/index/4paragraph.css">
-    <link rel="stylesheet" href="/css/index/5shape&boxes.css">
-    <link rel="stylesheet" href="/css/index/6paragraph_below_shape&boxes.css">
-    <link rel="stylesheet" href="/css/index/7footter.css">
-    <link rel="stylesheet" href="/css/returnbutton.css">
-    <link rel="stylesheet" href="/css/ahmed_card.css">
-    <link rel="stylesheet" href="/css/courses.css">
-    <link rel="stylesheet" href="/css/jagar_card.css">
-    <link rel="stylesheet" href="/css/login.css">
-    <link rel="stylesheet" href="/css/michael_card.css">
-    <link rel="stylesheet" href="/css/signup.css">
-    <link rel="stylesheet" href="/css/teachers.css">
+    <link rel="stylesheet" href="css/index/0general.css">
+    <link rel="stylesheet" href="css/index/1navbar.css">
+    <link rel="stylesheet" href="css/index/3below_background_boxes.css">
+    <link rel="stylesheet" href="css/index/2showcase.css">
+    <link rel="stylesheet" href="css/index/4paragraph.css">
+    <link rel="stylesheet" href="css/index/5shape&boxes.css">
+    <link rel="stylesheet" href="css/index/6paragraph_below_shape&boxes.css">
+    <link rel="stylesheet" href="css/index/7footter.css">
+    <link rel="stylesheet" href="css/returnbutton.css">
+    <link rel="stylesheet" href="css/ahmed_card.css">
+    <link rel="stylesheet" href="css/courses.css">
+    <link rel="stylesheet" href="css/jagar_card.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/michael_card.css">
+    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="css/teachers.css">
     </head>
 
 
@@ -30,7 +31,7 @@
   <div class=" row  justify-content-center align-items-center">
     <div class="col-4 text-start ">
       <div class="col">
-        <a href="index.html"><img id="Top" class="img"  src="/images/4.png" alt=""></a> 
+        <a href="index.html"><img id="Top" class="img"  src="images/4.png" alt=""></a> 
       </div>
     </div>
     <div class="col">
@@ -79,7 +80,7 @@
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
                       <div class="col">
-                          <a href="index.html"><img class="img" src="/images/4.png" alt=""></a>
+                          <a href="index.html"><img class="img" src="images/4.png" alt=""></a>
                         </div>
                     </h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -132,8 +133,8 @@
 </div>
 <!-- showcase -->
 <div>
-<img src="/images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
-<img src="/images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
+<img src="images/backgroundhome.png" class="card-img d-none d-lg-block " alt="...">
+<img src="images/ipad.png" class="card-img  d-md-block d-lg-none" alt="">
 <div class="below_navbar_text p-5 card-img-overlay container-fluid ">
 <div class="row justify-content-center  justify-content-lg-end">
   <div class="col-10 col-sm-10 col-md-10  col-lg-8 col-xl-8  col-xxl-8 text-center text-lg-end">
@@ -171,7 +172,7 @@
     <div class="row">
         <div class="text-center">
            <div>
-            <img class="imag_cards_size img-fluid" src="/images/2michael.png" alt="">
+            <img class="imag_cards_size img-fluid" src="images/2michael.png" alt="">
            </div>
 
             <div class="card_div text-center">
@@ -205,7 +206,7 @@
 
 <!-- footer -->
 <div class="fluid text-center">
-  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
+  <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="images/4.png" alt=""></a>
   <div class="user-select-none text-dark">
     Copy Right &copy; Ahmed Avdal Shereef
   </div>
