--- a/registration.html
+++ b/registration.html
@@ -194,7 +194,7 @@
 
 <!-- footer -->
 <div class="fluid text-center">
-    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="/images/4.png" alt=""></a>
+    <a onclick="scrollToTop()"  href="#top"> <img     class="logo_footer img-fluid" src="images/4.png" alt=""></a>
     <div class="user-select-none text-dark">
       Copy Right &copy; Ahmed Avdal Shereef
     </div>
